@@ -140,6 +140,7 @@
 - `baixing_teenager_content_scene.dart`: 青少年模式内容场景。
 - `baixing_video_player_scene.dart`: 视频播放场景。
 - `baixing_web_scene.dart`: Web页面场景。
+- `baixing_real_name_auth_scene.dart`: 实名认证场景，用于用户提交真实姓名和身份证号进行实名认证。
 
 ### 2.10 utils/
 工具类目录，存放各种辅助功能的工具类。
